# alloul-mcp-hub

./: .env.example  Caddyfile  Dockerfile.base  HUB_COMPLETE.md  PROGRESS.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
core/analytics/: Dockerfile  pyproject.toml
core/analytics/src/alloul_analytics/: __main__.py  server.py  settings.py
core/analytics/tests/: test_analytics.py
core/audit/: Dockerfile  pyproject.toml
core/audit/src/alloul_audit/: __main__.py  server.py  settings.py
core/audit/tests/: test_audit.py
core/identity/: Dockerfile  pyproject.toml
core/identity/tests/: test_identity.py
core/knowledge/: Dockerfile  pyproject.toml
core/knowledge/tests/: test_knowledge.py
core/reasoning/: Dockerfile  pyproject.toml
core/reasoning/tests/: test_reasoning.py
docs/: ARCHITECTURE.md  PRODUCT-INTEGRATION-GUIDE.md  TOOLS-CATALOG.md
handex/docintel/: Dockerfile  pyproject.toml
handex/docintel/tests/: test_docintel.py
handex/workflow/: Dockerfile  pyproject.toml
handex/workflow/tests/: test_workflow.py
migrations/: 001_schemas.sql  002_alloul_core.sql  003_product.sql  004_handex.sql  005_knowledge.sql  006_reasoning_budget.sql
product/billing/: Dockerfile  pyproject.toml
product/billing/tests/: test_billing.py
product/workspace/: Dockerfile  pyproject.toml
product/workspace/tests/: test_workspace.py
shared/: adapter.py  audit_log.py  auth.py  base_server.py  db.py  envelope.py  errors.py  settings.py  telemetry.py  tenant.py
(+33 files in other folders)
