[project]
name = "alloul-audit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastmcp>=0.4.0","asyncpg>=0.29.0","pydantic>=2.0.0","pydantic-settings>=2.0.0","structlog>=24.0.0"]
[project.optional-dependencies]
dev = ["pytest>=8.0.0","pytest-asyncio>=0.23.0","pytest-cov>=5.0.0","ruff>=0.6.0","mypy>=1.10.0"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
